--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,6 +6,32 @@
   <title>All-in-One Tools</title>
   <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css" />
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  
+  <!-- Enhanced mobile viewport for better mobile experience -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, user-scalable=yes, viewport-fit=cover" />
+  
+  <!-- Mobile optimization meta tags -->
+  <meta name="theme-color" content="#3B82F6" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+  <meta name="apple-mobile-web-app-title" content="Audio Tools" />
+  
+  <!-- Performance hints -->
+  <meta name="format-detection" content="telephone=no" />
+  <meta name="msapplication-tap-highlight" content="no" />
+  
+  <!-- PWA manifest -->
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  
+  <!-- Preconnect to improve performance -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://api.qrserver.com" />
+  
+  <meta name="description" content="Professional audio tools for cutting, converting, and editing audio files. Fast, secure, and completely free." />
+  
+  <!-- Apple touch icons for better mobile experience -->
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 </head>
 <body>
   <div id="root"></div>
